--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,24 +1,21 @@
-<section class="login-page">
-    <div class="form-heading">
-        <h1>Log In</h1>
-    </div>
-    <div class="form-section">
-        <form class="login-form">
-            <div>
-                <label for="username-login">Username</label>
-                <input type="text" class="entry-field" id="username-login" />
-            </div>
-            <div>
-                <label for="password-login">Password</label>
-                <input type="password" class="entry-field" id="password-login" />
-            </div>
-            <div>
-                <button type="submit" class="login-signup-btn">Log In!</button>
-            </div>
-        </form>
-    </div>
+<div class="card">
+  <div class="card-body">
+    <h3 class="card-header" id="login-title">Login</h3>
+<form id="login-form">
+  <div class="form-group">
+    <label for="exampleInputEmail1" for="username-login">Username</label>
+    <input type="text" class="form-control" id="username-login" autofocus="true" class aria-describedby="username">
+  </div>
+  <div class="form-group">
+    <label for="password-login">Password</label>
+    <input type="password" class="form-control" autofocus="true" id="password-login">
+  </div>
+  <button type="submit" class="btn btn-primary btn-lg">Login!</button>
+  <hr>
+  <a class="login-link" id="signup-link" href="/signup">Sign up instead</a>
+</form>
 
-    <a href="/signup" class="sign-in-link">sign up instead</a>
-</section>
+  </div>
+</div>
 
 <script src="/javascript/login.js"></script>
